--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
   /* flex-flow: column wrap; */
   flex-direction: column;
   width: 100%;
-  justify-content: space-around;
+  justify-content: space-between;
 
 }
 
@@ -30,7 +30,7 @@ header{
   display:flex;
   /* flex-flow: row wrap;
   justify-content: space-evenly; */
-  justify-content: space-between; 
+  /* justify-content: space-between;  */
   width: 100%; 
 }
 
@@ -41,7 +41,7 @@ header{
 }
 
 .head-myInfo{
-  background-color: red;
+  background-color: rgb(252, 177, 177);
   margin-left: 5rem;
 }
 
@@ -52,12 +52,18 @@ header{
 
 main{
   background-color: rgba(245, 149, 149, 0.5);
+  margin-right: 1rem;
+  width: 60rem;
 }
 
 aside{
   background-color: rgba(99, 245, 253, 0.5);
-  width: 17rem;
+  width: 20rem;
   margin-left: 1rem;
+}
+
+aside::after{
+  
 }
 
 footer{
@@ -65,10 +71,14 @@ footer{
 }
 .main-section{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  height: 100vh;
 }
 
-
+h2{
+  font-weight: bold;
+  font-size: 3rem;
+}
 
 
 
