--- a/style.css
+++ b/style.css
@@ -109,11 +109,14 @@ header{
   }
 
 pre{
-  background-color: red;
+  background-color: rgba(108, 96, 96, 0.254);
   display:inline-block;
   justify-content: center;
   border-radius: 0.3rem;
   font-size: 1.5rem;
+  border: none;
+  border-style: none;
+  padding: 30px;
 }
   
 @media (width < 800px) {
