--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
 body{
   font-family: "Marcellus", serif;
   background-color: rgba(235, 208, 224, 0.93);
-  color: rgb(21, 13, 1);
-  display: flex;
-  justify-content: center;
+  color: rgba(43, 41, 40, 0.853);
+   display: flex;
+  justify-content: space-between; 
   min-width: 800px;
   background-image: linear-gradient(rgb(193, 224, 249), rgb(245, 244, 193));
   /* background-image: linear-gradient(to top, rgba(147, 147, 147, 0.239), rgb(255, 165, 243)); */
@@ -21,17 +21,22 @@ body{
 .container{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 50%;
+    align-items: center;
     justify-content: center;
-    position: relative;
+    /* justify-items: center; */
+    /* position:relative; */
     min-height: 100vh;
     height: auto;
+    margin: 0 auto;
 }
   
   
 header{
     /* background-color: rgba(254, 254, 254, 0.551); */
     display:flex;
+    /* justify-content: center; */
+    margin: 0 auto;
   }
   
   .header{
@@ -40,30 +45,35 @@ header{
     width: 100%; 
   }
   
+.header p{
+  font-size: 1.5rem;
+}
+
 .myImage{
     display: flex;
-    /* margin: 0 10px; */
+    margin-right: 5rem;
     align-items: center;
-  }
-  
+    /* justify-content: center; */
+}
+
 .head-myInfo{
     /* background-color: rgb(252, 177, 177); */
     margin-left: 1rem;
-    width: 60rem;
+    width: auto;
     overflow-wrap: break-word; 
   }
   
   main{
     /* background-color: rgba(245, 149, 149, 0.5); */
     margin-left: 3rem;
-    width: 60rem;
+    width: auto;
     overflow-wrap: break-word;
   }
   
   .main-section{
     display: flex;
     justify-content: center;
-    height: 100vh;
+    /* height: 100vh; */
     margin-top: 1rem;
     overflow-wrap: break-word;
     margin-bottom: 1rem; /* Добавляем отступ снизу */
@@ -76,7 +86,6 @@ header{
     margin-left: 1rem;
     box-sizing: border-box;
     position:relative;
-    /* border-right: thick solid; */
   }
   
   aside::after {
@@ -90,22 +99,29 @@ header{
   }
   
   
+
   footer{
     background-color: rgba(78, 95, 96, 0.5);
     margin-top: auto;
   }
   
   h1{
-    font-size: 4rem;
+    font-size: 3.5rem;
+    color: rgba(10, 4, 23, 0.893);
+  }
+
+  .header-h1{
+    font-weight: bold;
+    margin-bottom: 3rem;
   }
 
   h2{
     font-weight: bold;
-    font-size: 3rem;
+    font-size: 1.8rem;
   }
 
   li{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
 
 pre{
@@ -113,61 +129,93 @@ pre{
   display:inline-block;
   justify-content: center;
   border-radius: 0.3rem;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   border: none;
   border-style: none;
   padding: 30px;
 }
   
-@media (width < 800px) {
+@media (width < 50rem) {
 
   body{
     min-width: 800px;
     width: 100%;
+    margin: 0 auto;
   }
 
   .myImage{
-    display: flex;;
+    display: flex;
+    text-align: center;
+  }
+
+  .head-myInfo{
+    overflow-wrap: break-word;
+    width: 100%;
   }
 
   .container{
     justify-content: center;
     display:block;
+    margin: 0 auto;
+
   }
 
   .header{
     width: 100%;
     height: auto;
+    /* display: block; */
+    margin: 0 auto;
   }
 
   .main-section{
     display:block;
     height: auto;
+    justify-content:flex-start;
+    margin: 0 auto;
   }  
+
   
   aside{
     width: 100%;
     margin-top: 1rem;
+    margin: 0 auto;
   }
+
+  h1{
+    font-size: 3rem;
+  }
+
 
   aside::after{
     display:none;
   }
 
-  h2{
-    font-weight: 5rem;
-  }
+  /* .skill-list{
+    box-sizing: border-box;
+  } */
 
-  /* aside::before {
+  aside::before {
     content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    position:absolute;
+    bottom: -20px;
+    left: -20px;
     width: 100%; 
     height: 5px; 
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.712);
+  }
+
+  /* header::after{
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    top: 39rem;
+    left: 0px;
+    width: 50%; 
+    height: 5px; 
+    background-color: rgba(255, 255, 255, 0.712);
   } */
-}
+  }
+
   
   
   
