--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
 :root{
   --main-text-color: rgba(43, 41, 40, 0.853);
   --border-color: rgba(255, 255, 255, 0.722);
+  --background-color: rgba(78, 95, 96, 0.219);
 }
 
 /* layouts */
@@ -53,7 +54,6 @@ header{
   display: flex;
   margin-right: 5rem;
   align-items: center;
-    /* justify-content: center; */
 }
 
 .head-myInfo{
@@ -110,8 +110,16 @@ aside::after {
 }
   
 footer{
-  background-color: rgba(78, 95, 96, 0.5);
+  background-color:var(--background-color);
+  color: var(--main-text-color);
   margin-top: auto;
+  width: 100%;
+  align-items: center;
+}
+.footer{
+  width: 100%;
+  text-align: center;
+
 }
   
 h1{
@@ -134,7 +142,7 @@ h2{
   }
 
 pre{
-  background-color: rgba(138, 138, 131, 0.172);
+  background-color: var(--background-color);
   display:inline-block;
   justify-content: center;
   border-radius: 0.3rem;
@@ -207,10 +215,6 @@ pre{
     width: 100%; 
     height: 5px; 
     background-color: rgba(255, 255, 255, 0.712);
-  }
-  
-  span{
-    
   }
   
   h1{
