--- a/style.css
+++ b/style.css
@@ -154,9 +154,10 @@ pre{
 @media (width < 50rem) {
 
   body{
-    min-width: 800px;
+    min-width: 320px;
     width: 100%;
     margin: 0 auto;
+    flex-direction: column;
   }
 
   .container{
@@ -186,8 +187,9 @@ pre{
   .main-section{
     display: block;
     height: auto;
-    justify-content: flex-start;
-    margin: 0 auto;
+    justify-content:center;
+    margin-left: 1rem;
+    /* margin: 0 auto; */
   }  
 
   aside{
@@ -204,7 +206,7 @@ pre{
     content: '';
     position: absolute;
     bottom: -20px;
-    left: -20px;
+    left: auto;
     width: 100%;
     height: 5px;
     background-color: rgba(255, 255, 255, 0.712);
